--- a/sections/achievements.tex
+++ b/sections/achievements.tex
@@ -1,4 +1,4 @@
-\section{Achievements}
+\section{Achievements and Certificates}
 
 \resumeSubHeadingListStart
     \resumeSubheading
@@ -16,4 +16,13 @@
         \resumeItem{18th Place among 97 freshmen participants.}
         \resumeItem{Thrived in a high-pressure environment, solving intricate problems within strict timeframes.}
     \resumeItemListEnd
+    % ------------------------------------------------------------------------------------------ %
+    \resumeSubheading
+    {AppCon2023 Development Contest Certificate of Participation}{Jun 2024}
+    {OTIS Japan Inc.}{Philippines}
+    % ------------------------------------------------------------------------------------------ %
+    \resumeSubheading
+    {JPCIS ITalks: Ethical Hacking}{Oct 2024}
+    {Divine World College of Calapan}{Philippines}
+    
 \resumeSubHeadingListEnd
