--- a/sections/education.tex
+++ b/sections/education.tex
@@ -5,6 +5,9 @@
     {Ateneo de Naga University}{Expected May 2025}
     {Bachelor of Science in Information Technology (GPA: 3.40 / 4.00)}{Naga City, Camarines Sur, 4400}
     \begin{itemize}
-        \item[] \textbf{Relevant Coursework:} Introduction to Computing, Fundamentals of Programming (C++), Discrete Mathematics for IT Professionals, Intermediate Programming (C/C++), Quantitative Methods with Simulation and Modeling, Data Structures and Algorithms (C++), Information Management (Oracle), Human Computer Interaction, Computer Networking I (Cisco), Object-Oriented Programming (OOP), Trends in Application Development, Operating Systems (C), Advanced Database Systems (Oracle), Integrative Programming and Technologies I (R), Computer Networking 2 (Cisco), Platform Technologies, Technopreneurship for IT Professionals, 2D Game Development, Integrative Programming and Technologies II (Flutter), Infromation Assurance and Security I, Web Systems and Technologies, Systems Administration and Maintenance, Systems Integration and Architecture for IT Professionals, Quality Management, Information Assurance and Security II, UI/UX Design, Mobile Computing and Communication (Flutter), IT Capstone 1 and 2, and IT Senior Practicum (486 Hours).
+        \item{Management Information System Intern and Volunteer}
+    \end{itemize}
+    \begin{itemize}
+        \item \textbf{Relevant Coursework:} Introduction to Computing, Fundamentals of Programming, Discrete Math, Intermediate Programming, Data Structures \& Algorithms, Information Management, Human Computer Interaction, OOP, Trends in Application Development, OS, Advanced Database Systems, Integrative Programming \& Technologies, Computer Networking, Platform Technologies, Technopreneurship for IT Professionals, 2D Game Development, Infromation Assurance and Security, Web Systems and Technologies, Systems Administration and Maintenance, Systems Integration and Architecture for IT Professionals, UI/UX Design, Mobile Computing and Communication.
     \end{itemize}
 \resumeSubHeadingListEnd
