--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -13,7 +13,6 @@
     {STUBU.AI}{Oct 2023 -- Apr 2024}
     {Lead Frontend Web Developer}{React, TailwindCSS, Typescript, NodeJS, MongoDB, ExpressJS}
     \resumeItemListStart
-        \resumeItem{Lead front-end developer for STUBU.AI -- an AI-powered Learning Management System that adapts to learners as an all-in-one study buddy turning education into a personalized and interactive experience; reinventing the traditional education system.}
         \resumeItem{Assisted on UI/UX Design and made improvements to user experience (UX).}
         \resumeItem{Lead the project management for the front-end team consisting of four (4) developers and conducted SCRUM meetings for the group.}
         \resumeItem{Utilized version control and project management tools such as ClickUp and Github for efficient collaboration and tracking of project progress.}
@@ -24,8 +23,7 @@
     {aiProof}{Mar 2024 -- May 2024}
     {Mobile Developer}{Flutter, Dart, Firebase}
     \resumeItemListStart
-        \resumeItem{Lead Project Manager of a two-person project.}
-        \resumeItem{A convenient mobile application tool for scanning and AI proofing written documents.}
+        \resumeItem{Lead project manager of a two-person project. Conducted KANBAN and SCRUM meetings for the group.}
         \resumeItem{Developed core features of the applications e.g., OCR, statistics, and home page.}
         \resumeItem{Configured and setup back-end requirements for the Rapid API Integration for AI proofing.}
         \resumeItem{UI/UX Engineer responsible for developing responsive and custom made design for an overall user experience.}
@@ -35,8 +33,7 @@
     {eBayan}{Sept 2023 -- Dec 2023}
     {Mobile Developer}{Flutter, Dart, Firebase}
     \resumeItemListStart
-        \resumeItem{An intuitive barangay-to-community mobile application for announcement creation management system.}
-        \resumeItem{Project manager of the entire project of a two-person project.}
+        \resumeItem{Lead project manager of the project. Conducted KANBAN and SCRUM meetings for the group.}
         \resumeItem{Developed core features of the application e.g., management system, authentication, and back-end configuration to google services -- firebase, firestore, and firebase authentication.}
         \resumeItem{UI/UX engineer responsible for developing responsive and custom made design for an overall user experience.}
     \resumeItemListEnd
