--- a/sections/references.tex
+++ b/sections/references.tex
@@ -1,35 +1,41 @@
 \section{References}
 
+\begin{multicols}{2}
+\raggedcolumns
 \resumeSubHeadingListStart
     \resumeSubheading
-    {Joshua C. Martinez, MIT}{Ateneo de Naga University}
-    {Chief Information Technology Officer}{Naga City, Camarines Sur, 4400}
+    {Joshua C. Martinez, MIT}{}
+    {Chief Information Technology Officer}{}
     \resumeItemListStart
-        \resumeItem{Phone: +(63) 900-000-0000}
+        \resumeItem{Direct Line: +(63).54.881.4128}
         \resumeItem{Email: joshuamartinez@gbox.adnu.edu.ph}
+        \resumeItem{Ateneo de Naga University}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
-    {Prof. Estrella H. Montealegre}{Ateneo de Naga University}
-    {Management Information Systems, Director}{Naga City, Camarines Sur, 4400}
+    {Prof. Estrella H. Montealegre}{}
+    {Management Information Systems, Director}{}
     \resumeItemListStart
         \resumeItem{Phone: +(63) 918-926-6712}
         \resumeItem{Email: emontealegre@gbox.adnu.edu.ph}
+        \resumeItem{Ateneo de Naga University}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ryan Jay D. Rosano}{Ateneo de Naga University}
-    {Information System Administrator}{Naga City, Camarines Sur, 4400}
+    {Information System Administrator}{}
     \resumeItemListStart
         \resumeItem{Phone: +(63) 900-000-0000}
         \resumeItem{Email: rrosano@gbox.adnu.edu.ph}
+        \resumeItem{Ateneo de Naga University}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Andrew Coros}{Freelancer}
-    {Full-Stack Web Developer}{San Fernando, Camarines Sur, 4400}
+    {Freelance Full-Stack Web Developer}{}
     \resumeItemListStart
         \resumeItem{Phone: +(63) 916-560-3013}
         \resumeItem{Email: corosdrew11@gmail.com}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
+\end{multicols}
