--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,15 +1,17 @@
 \section{Technical Skills}
 
-\resumeItemListStart
-	\resumeItem{Knowledge in various programming languages e.g., C, C\#, CSS, Dart, HTML, Java, JavaScript, PHP, Python, TypeScript.}
-	\resumeItem{Knowledge in different databases and tools e.g., MySQL, MSSQL, Oracle, MongoDB, Firebase, SQL, PL/SQL.}
-	\resumeItem{Knowledge in Cloud Computing Platforms e.g., DigitalOcean and Google Cloud Platform.}
-	\resumeItem{Experience in Web/Mobile/Desktop application development technologies e.g., Android SDK, ASP.NET, Bootstrap, Express.js, Flutter, jQuery, Laravel, NodeJS, React, TailwindCSS, Unity.}
-	\resumeItem{Highly experienced in various operating systems, including Windows and Linux.} 
-	\resumeItem{Proficiency in various development tools e.g., FTP, Bash, Figma, Spline, Blender, Canva, Google Suites, MS Suites, LaTeX, and version control Tools i.e., Git/GitHub/GitLab.}
-	\resumeItem{Experience in technical project management on a pair or small to mid-size group of team.}
-	\resumeItem{Experience in working with small to large-scale application projects following or enforcing clean code architecture.}
-	\resumeItem{Strong technical adaptability on any software to hardware related topics or projects.}
-	\resumeItem{Strong experience in Application, UI/UX Design, Presentation, Collaboration, and Leadership.}
-	\resumeItem{Excellent communication skills and grasp of oral and written Tagalog, Bicol or English.}
+\begin{multicols}{2}
+	\resumeItemListStart
+    \resumeItem{Proficient in programming languages: C\#, PHP, HTML/CSS/SaSS/JS, Typescript, Python}
+    \resumeItem{Experienced with databases \& tools: MySQL, MSSQL, Oracle, MongoDB, Firebase, SQL, PL/SQL.}
+    \resumeItem{Familiar with cloud platforms: DigitalOcean, Google Cloud Platform.}
+    \resumeItem{Skilled in frameworks \& libraries: Android SDK, ASP.NET, Express.js, Flutter, jQuery, Laravel, NodeJS, React, TailwindCSS, Unity.}
+    \resumeItem{Experienced in Windows \& Linux environments.}  
+    \resumeItem{Proficient with development tools: Terminal, Figma, Google Suite, MS Suite, LaTeX, Git/GitHub/GitLab.}
+    \resumeItem{Technical project management experience in team settings.}
+    \resumeItem{Worked on small to large-scale applications with clean code architecture.}
+    \resumeItem{Strong adaptability across software and hardware projects.}
+    \resumeItem{Expertise in application development, UI/UX design, presentations, collaboration, and leadership.}
+    \resumeItem{Fluent in Tagalog and English.}
 \resumeItemListEnd
+\end{multicols}
