chore: updated resume and cv.

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -18,7 +18,7 @@
     {Contract • Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
     \resumeItemListStart
         \resumeItem{Developed a queue management system solution for the University, which enhanced the user experience by reducing queue delays and eliminating the inconveniences associated with traditional queuing systems.}
-        \resumeItem{Developed a comprehensive queue management system for the University Treasurer's Office, integrating a QR code-based ticketing system and a real-time queue status view for clients, with customizable controls through admin management.}
+        \resumeItem{Integrated a online queueing for students with QR access, and a real-time queue status view for clients, with customizable controls through admin management.}
         \resumeItem{Optimized front-end, back-end, and database by improving SQL queries and data handling, increasing system efficiency by 84\% and enabling seamless page loads with 26,000+ transactions per branch.}
         \resumeItem{Developed the system within a stringent two-month development and deployment timeframe, followed by a five-month maintenance period, while adhering to strict deadlines and managing time-sensitive pressures.}
         \resumeItem{Conducted a comprehensive testing phase, prototyping, and feedback, and facilitated onboarding for clients to ensure smooth adoption and operational efficiency.}
