chore: updated cv and resume.

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -44,7 +44,7 @@
     \resumeItemListStart
         \resumeItem{Lead the development of the game; a physics-based 3D ragdoll power dodgeball game. that allowed the team to stay on track of the short deadline. Developed the game's core mechanics and gameplay; Designed the game's UI/UX.}
         \resumeItem{Developed the game's AI and enforced project architecture through simulation tick-based event system that allowed for clean modularized code.}
-        \resumeItem{Utilized version control and project management tools such as Trello and Github for efficient collaboration and tracking of project progress.}
+        \resumeItem{Utilized version control and project management tools such as Trello and Github for efficient collaboration and tracking of project progress along with conducting SCRUM meetings for the team.}
         \resumeItem{Collaborated with cross-functional teams to gather requirements, work on strengths, and ensure smooth integration and development for the game.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
