--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -5,6 +5,7 @@
     \resumeItem{Proficient in programming languages: C\#, PHP, HTML/CSS/SaSS/JS, Typescript, Python}
     \resumeItem{Experienced with databases \& tools: MySQL, MSSQL, Oracle, MongoDB, Firebase, SQL, PL/SQL.}
     \resumeItem{Familiar with cloud platforms: DigitalOcean, Google Cloud Platform.}
+    \resumeItem{Experience with CI/CD pipelines, including GitHub Actions and Docker.}
     \resumeItem{Skilled in frameworks \& libraries: Android SDK, ASP.NET, Express.js, Flutter, jQuery, Laravel, NodeJS, React, TailwindCSS, Unity.}
     \resumeItem{Experienced in Windows \& Linux environments.}  
     \resumeItem{Proficient with development tools: Terminal, Figma, Google Suite, MS Suite, LaTeX, Git/GitHub/GitLab.}
