chore: updated cv and resume.

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -7,9 +7,9 @@
     \resumeItemListStart
         \resumeItem{Lead developer for HRIS: a new web portal for Ateneo de Naga University's HRMO. Handled confidential access to HR records from the University's database with careful measures in place.}
         \resumeItem{Developed key modules of the application ranging from reports, management, design, data processing/analysis, and hardware configuration resulting in a drastic improvement to the HR's workflow in terms of eliminating the manual processes.}
-        \resumeItem{Optimized data rendering and fetching of employee records on thousands of records by usage of optimized PL/SQL queries, views, procedures, indexing, functions, server-side implementations, batch processing and client-side rendering.}
-        \resumeItem{Crafted and applied a data migration plan to perform a large-scale migration of up to 3,000,000+ records from MySQL and Postgres to Oracle, resulting in unified data records of HRMO in the main database repository of the University.}
-        \resumeItem{Wrote clear technical and project documentation, i.e., ERD, user manual, gantt chart,  swimlane, data dictionary, and code documentation.}
+        \resumeItem{Designed the database schema in Oracle using ERD and optimized data rendering and fetching of employee records on thousands of records by usage of optimized PL/SQL queries, views, procedures, indexing, functions, server-side implementations, batch processing and client-side rendering.}
+        \resumeItem{Crafted and applied a data migration plan to perform a large-scale migration of up to 3,000,000+ records from MySQL and Postgres to Oracle, resulting in unified data records of HRMO in the main database of the University.}
+        \resumeItem{Enforced clean architecture to the project with OOP concepts, MVC, and enforced Agile development – RAD for the development team. Wrote clear technical and project documentation, i.e., ERD, user manual, gantt chart,  swimlane, data dictionary, and code documentation.}
         \resumeItem{Conducted a comprehensive testing phase, prototyping, and feedback to HRMO, and facilitated onboarding for HR officers to ensure smooth adoption and operational efficiency. Presented the data migration results to HRMO for future decision-making.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
