--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -10,7 +10,7 @@
     \resumeItem{Experienced in Windows \& Linux environments.}  
     \resumeItem{Proficient with development tools: Terminal, Figma, Google Suite, MS Suite, LaTeX, Git/GitHub/GitLab.}
     \resumeItem{Technical project management experience in team settings.}
-    \resumeItem{Worked on small to large-scale applications with clean code architecture.}
+    \resumeItem{Worked on small to large-scale applications with a passion for enforcing clean code architecture.}
     \resumeItem{Strong adaptability across software and hardware projects.}
     \resumeItem{Expertise in application development, UI/UX design, presentations, collaboration, and leadership.}
     \resumeItem{Fluent in Tagalog and English.}
