chore: updated linked in url.

--- a/sections/heading.tex
+++ b/sections/heading.tex
@@ -1,8 +1,8 @@
 \begin{center}
     \textbf{\Huge \scshape Johcel Gene T. Bitara} \\ \vspace{1pt}
     \seticon{faPhone} \ \small 0970 322 4661 \quad
-    \href{mailto:genebitara@gmail.com}{\seticon{faInbox} \underline{genebitara@gmail.com}} \quad
-    \href{https://www.linkedin.com/in/johcel-gene-bitara-a413b9283}{\seticon{faLinkedin} \underline{LinkedIn}} \quad
-    \href{https://github.com/genebit}{\seticon{faGithub} \underline{GitHub}} \quad
-    \href{http://genbit-portfolio.web.app/}{\seticon{faInbox} \underline{Portfolio}} \quad
+    \href{mailto:genebitara@gmail.com}{\seticon{faInbox} \underline{genebitara@gmail.com}} \\ \vspace{1pt}
+    \href{https://www.linkedin.com/in/gene-bitara}{\seticon{faLinkedin} \underline{linkedin.com/in/gene-bitara}} \quad
+    \href{https://github.com/genebit}{\seticon{faGithub} \underline{github.com/genebit}} \quad
+    \href{http://genbit-portfolio.web.app}{\seticon{faInbox} \underline{genbit-portfolio.web.app}} \quad
 \end{center}
