fix: corrected order and updated resume and cv.

--- a/sections/certification.tex
+++ b/sections/certification.tex
@@ -2,6 +2,9 @@
 
 \resumeSubHeadingListStart
     \resumeSubheading
+    {Level 1 Certified Data Center Technician (CDCT)}{Aug 2024}
+    {East West Int'l Education Specialist (EWIES), E-PLDT Vitro}{Camarines Sur}
+    \resumeSubheading
     {Smartbooks and Power BI Certificate of Completion}{Jun 2024}
     {Ateneo de Naga University}{Camarines Sur}
     \resumeSubheading
