chore: updated cv and resume.

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -3,7 +3,7 @@
 \resumeSubHeadingListStart
     \resumeSubheading
     {Ateneo de Naga University -- Project HRIS (Phase 1 and 2)}{June 2024 -- Present}
-    {Contract • Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
+    {Internship • Lead Full-Stack Web Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Lead developer for HRIS: a new web portal for Ateneo de Naga University's HRMO. Handled confidential access to HR records from the University's database with careful measures in place.}
         \resumeItem{Developed key modules of the application ranging from reports, management, design, data processing/analysis, and hardware configuration resulting in a drastic improvement to the HR's workflow in terms of eliminating the manual processes.}
@@ -15,7 +15,7 @@
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Ateneo de Naga University -- Project RETSU}{Jan 2024 -- Mar 2024}
-    {Contract • Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
+    {Contract • Lead Full-Stack Web Developer  (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Developed a queue management system solution for the University, which enhanced the user experience by reducing queue delays and eliminating the inconveniences associated with traditional queuing systems.}
         \resumeItem{Integrated a online queueing for students with QR access, and a real-time queue status view for clients, with customizable controls through admin management.}
@@ -24,9 +24,18 @@
         \resumeItem{Conducted a comprehensive testing phase, prototyping, and feedback, and facilitated onboarding for clients to ensure smooth adoption and operational efficiency.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
+    % 
+    \resumeSubheading
+    {Ateneo de Naga University -- Management Information System Intern}{Aug 2023 -- Present}
+    {Internship • Junior Application Developer (System Design and Development)}{Naga City, Camarines Sur}
+    \resumeItemListStart
+        \resumeItem{Developed and contributed through system development for the web applications in the University.}
+        \resumeItem{Communicated with key stakeholders per project and developed web system design for the database schemas under Oracle and created UI/UX design.}
+    \resumeItemListEnd
+    % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
     {Department of Agriculture -- Project DAAMIA}{Sep 2022 -- Oct 2023}
-    {Subcontract • Lead Full-Stack Web Developer}{Naga City, Camarines Sur, 4400}
+    {Subcontract • Lead Full-Stack Web Developer (C\#, .NET Framework, MSSQL)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Developed a weather monitoring system by processing and storing large number of datasets from a local API weather data.}
         \resumeItem{Optimized the API fetching process to achieve 80\% efficiency, which improved the rendering of pin markers on the map view, reduced the load time of pages, and enhanced data processing for the filter page.}
