--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -2,21 +2,13 @@
 
 \resumeSubHeadingListStart
     \resumeSubheading
-    {ADNU RACER}{Jun 2024 -- Sep 2024}
-    {Backend Developer/Database Designer}{Oracle}
-    \resumeItemListStart
-        \resumeItem{Voluntarily contributed to the design of the newly approved system's database schema by developing the conceptual model and wrote the SQL scripts for database creation.}
-        \resumeItem{Voluntarily contributed to creating system privileges and roles to ensure access control and data security to the system.}
-    \resumeItemListEnd
-    % ------------------------------------------------------------------------------------------ %
-    \resumeSubheading
     {STUBU.AI}{Oct 2023 -- Apr 2024}
     {Lead Frontend Web Developer}{React, TailwindCSS, Typescript, NodeJS, MongoDB, ExpressJS}
     \resumeItemListStart
         \resumeItem{Assisted on UI/UX Design and made improvements to user experience (UX).}
         \resumeItem{Lead the project management for the front-end team consisting of four (4) developers and conducted SCRUM meetings for the group.}
         \resumeItem{Utilized version control and project management tools such as ClickUp and Github for efficient collaboration and tracking of project progress.}
-        \resumeItem{Conducted code reviews to the team developers and provided technical documentations upon submission for Appcon 2023}
+        \resumeItem{Conducted code reviews to the team developers and provided technical documentations upon submission for Appcon 2023.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
     \resumeSubheading
