chore: updated cv and resume.

--- a/sections/achievements.tex
+++ b/sections/achievements.tex
@@ -6,7 +6,7 @@
         {City of Naga}{Camarines Sur}
         \resumeItemListStart
             \resumeItem{Pitched the application STUBU.AI, an adaptive study-buddy web application designed to help learners study with a personalized learning environment. Pitched the application to the Local Government Unit (LGU) of Naga City for the Idea2Startup program.} 
-            \resumeItem{Managed to be among one of the final list of startups, securing a grant totaling 53,874.36 Php earmarked for the testing and deployment phases of the website.}
+            \resumeItem{Placed among one of the final list of qualifying startups, securing a grant totaling 53,874.36 Php earmarked for the testing and deployment phases of the website.}
         \resumeItemListEnd
         % ------------------------------------------------------------------------------------------ %
         \resumeSubheading
