--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -2,13 +2,13 @@
 
 \begin{multicols}{2}
 	\resumeItemListStart
-    \resumeItem{Proficient in programming languages: C\#, PHP, HTML/CSS/SaSS/JS, Typescript, Python}
-    \resumeItem{Experienced with databases \& tools: MySQL, MSSQL, Oracle, MongoDB, Firebase, SQL, PL/SQL.}
+    \resumeItem{Proficient in programming languages: C\#, PHP, HTML/CSS/SaSS/JS, Typescript.}
+    \resumeItem{Experienced with databases \& tools: MSSQL, Oracle, Firebase, SQL, PL/SQL.}
     \resumeItem{Familiar with cloud platforms: DigitalOcean, Google Cloud Platform.}
     \resumeItem{Experience with CI/CD pipelines, including GitHub Actions and Docker.}
     \resumeItem{Skilled in frameworks \& libraries: Android SDK, ASP.NET, Express.js, Flutter, jQuery, Laravel, NodeJS, React, TailwindCSS, Unity.}
     \resumeItem{Experienced in Windows \& Linux environments.}  
-    \resumeItem{Proficient with development tools: Terminal, Figma, Google Suite, MS Suite, LaTeX, Git/GitHub/GitLab.}
+    \resumeItem{Proficient with development tools: Terminal, Figma, Google Suite, MS Suite, Git/GitHub/GitLab.}
     \resumeItem{Technical project management experience in team settings.}
     \resumeItem{Worked on small to large-scale applications with a passion for enforcing clean code architecture.}
     \resumeItem{Strong adaptability across software and hardware projects.}
