--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -2,14 +2,14 @@
 
 \resumeSubHeadingListStart
     \resumeSubheading
-    {Ateneo de Naga University -- Project HRIS (Phase 1 and 2)}{June 2024 -- Present}
-    {Internship • Lead Full-Stack Web Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
+    {Ateneo de Naga University -- Project HRIS \& ADNUONE (Phase 1 and 2)}{Jun 2024 -- Present}
+    {Contract • Lead Full-Stack Web Developer (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
     \resumeItemListStart
         \resumeItem{Lead developer for HRIS: a new web portal for Ateneo de Naga University's HRMO. Handled confidential access to HR records from the University's database with careful measures in place.}
         \resumeItem{Developed key modules of the application ranging from reports, management, design, data processing/analysis, and hardware configuration resulting in a drastic improvement to the HR's workflow in terms of eliminating the manual processes.}
         \resumeItem{Designed the database schema in Oracle using ERD and optimized data rendering and fetching of employee records on thousands of records by usage of optimized PL/SQL queries, views, procedures, indexing, functions, server-side implementations, batch processing and client-side rendering.}
         \resumeItem{Crafted and applied a data migration plan to perform a large-scale migration of up to 3,000,000+ records from MySQL and Postgres to Oracle with 99.82\% success rate, resulting in unified data records of HRMO in the main database of the University.}
-        \resumeItem{Enforced clean architecture to the project with OOP concepts, MVC, and enforced Agile development – RAD for the development team. Wrote clear technical and project documentation, i.e., ERD, user manual, gantt chart,  swimlane, data dictionary, and code documentation.}
+        \resumeItem{Enforced clean architecture to the project with advanced OOP concepts. Wrote clear technical and project documentation, i.e., ERD, user manual, gantt chart,  swimlane, data dictionary, and code documentation.}
         \resumeItem{Conducted a comprehensive testing phase, prototyping, and feedback to HRMO, and facilitated onboarding for HR officers to ensure smooth adoption and operational efficiency. Presented the data migration results to HRMO for future decision-making.}
     \resumeItemListEnd
     % ------------------------------------------------------------------------------------------ %
@@ -17,7 +17,7 @@
     {Ateneo de Naga University -- Project RETSU}{Jan 2024 -- Mar 2024}
     {Contract • Lead Full-Stack Web Developer  (PHP, Laravel, Oracle)}{Naga City, Camarines Sur}
     \resumeItemListStart
-        \resumeItem{Developed a queue management system solution for the University, which enhanced the user experience by reducing queue delays and eliminating the inconveniences associated with traditional queuing systems.}
+        \resumeItem{Developed a queue management system solution for the University, which enhanced the user experience by reducing queue delays and eliminating the inconveniences associated with traditional queuing systems in AdNU.}
         \resumeItem{Integrated a online queueing for students with QR access, and a real-time queue status view for clients, with customizable controls through admin management.}
         \resumeItem{Optimized front-end, back-end, and database by improving SQL queries and data handling, increasing system efficiency by 84\% and enabling seamless page loads with 26,000+ transactions per branch.}
         \resumeItem{Developed the system within a stringent two-month development and deployment timeframe, followed by a five-month maintenance period, while adhering to strict deadlines and managing time-sensitive pressures.}
