fix: corrected term.

--- a/sections/education.tex
+++ b/sections/education.tex
@@ -3,7 +3,7 @@
 \resumeSubHeadingListStart
     \resumeSubheading
     {Ateneo de Naga University}{Expected May 2025}
-    {Bachelor of Science in Information Technology (GPA: 3.42 / 4.00)}{Naga City, Camarines Sur, 4400}
+    {Bachelor of Science in Information Technology (QPI: 3.42 / 4.00)}{Naga City, Camarines Sur, 4400}
     \begin{itemize}
         \item \textbf{Relevant Coursework:} Introduction to Computing, Fundamentals of Programming, Discrete Math, Intermediate Programming, Data Structures \& Algorithms, Information Management, Human Computer Interaction, OOP, Trends in Application Development, OS, Advanced Database Systems, Integrative Programming \& Technologies, Computer Networking, Platform Technologies, Technopreneurship for IT Professionals, 2D Game Development, Infromation Assurance and Security, Web Systems and Technologies, Systems Administration and Maintenance, Systems Integration and Architecture for IT Professionals, UI/UX Design, Mobile Computing and Communication.
     \end{itemize}
