chore: updated achievements.

--- a/resume/latest/sections/achievements.tex
+++ b/resume/latest/sections/achievements.tex
@@ -2,7 +2,7 @@
 
 \resumeSubHeadingListStart
     \resumeSubheading
-        {Idea2Startup Fund Awardee}{Dec 2024}
+        {Idea2Startup Fund Awardee -- Project STUBU.AI}{Dec 2024}
         {Local Government Unit (LGU) City of Naga}{Naga City, Camarines Sur}
         \resumeItemListStart
             \resumeItem{Pitched and placed among one of the final list of qualifying startups, securing a grant totaling 53,874.36 Php earmarked for the testing and deployment phases of the website.}
